--- a/developer/index.jade
+++ b/developer/index.jade
@@ -1833,6 +1833,14 @@ block slides
 
     article.screen.screen--grid-support
 
+    article.center.code-0
+        .wrapper
+            pre
+                code.css.
+                    @supports ( grid-auto-flow: dense ) {
+                        /* Магия */
+                    }
+
     article.center.qrcode.var-2
         .wrapper
             .half
