--- a/developer/index.jade
+++ b/developer/index.jade
@@ -57,6 +57,9 @@ block slides
 
     article.illustration.illustration--rocket
 
+    //- Proposal to CERN 1989
+    //- FP 1990
+    //- HTML 1991
     article.illustration.illustration--plain.plain.cloud.center
         h1
             p.wrapper plain
@@ -1221,6 +1224,10 @@ block slides
                 br
                 | Саммер?
 
+    article.cloud.center.summer
+        h1
+            p.wrapper vQx
+
     article.screen.screen--display-table-support
 
     article.center.qrcode.var
@@ -1553,305 +1560,9 @@ block slides
 
     article.screen.screen--flex-support
 
-    article.cloud.center.grid
+    article.cloud.center.grid.limit
         h1
             p.wrapper Grid Layout
-
-    //- https://jsfiddle.net/fcesfad3/
-    article.example.example-grid-layout
-        .page
-            main.main Капитан схватил утконоса и радостноподбросил его в небо. Зверек расправил крылья и взлетел
-            nav.nav Навигация
-            aside.aside Реклама
-            header.header Шапка
-            footer.footer Подвал
-
-    article.illustration.illustration--grid-scheme
-
-    article.center.code-1
-        .wrapper
-            pre
-                code.html.
-                    &lt;div class="page">
-                        &lt;main class="main">Контент&lt;/main>
-                        &lt;nav class="nav">Навигация&lt;/nav>
-                        &lt;aside class="aside">Реклама&lt;/aside>
-                        &lt;header class="header">Шапка&lt;/header>
-                        &lt;footer class="footer">Подвал&lt;/footer>
-                    &lt;/div>
-
-    article.center.code-1
-        .wrapper
-            pre
-                code.css.
-                    .page {
-                        display: grid;
-                        grid-gap: 0 20px;
-                        grid-template-columns: 250px auto 350px;
-                        grid-template-rows: 100px auto 100px;
-                    }
-
-
-    article.center.code-1
-        .wrapper
-            pre
-                code.css.
-                    .header {
-                        grid-row: 1;
-                        grid-column: 1/4;
-                    }
-                    .footer {
-                        grid-row: 3;
-                        grid-column: 1/4;
-                    }
-
-    article.center.code-3
-        .wrapper
-            pre
-                code.css.
-                    .nav {
-                        grid-row: 2;
-                        grid-column: 1;
-                    }
-                    .main {
-                        grid-row: 2;
-                        grid-column: 2;
-                    }
-                    .aside {
-                        grid-row: 2;
-                        grid-column: 3;
-                    }
-
-    article.example.example-grid-layout
-        .page
-            main.main Капитан схватил утконоса и радостноподбросил его в небо. Зверек расправил крылья и взлетел
-            nav.nav Навигация
-            aside.aside Реклама
-            header.header Шапка
-            footer.footer Подвал
-
-    //- https://jsfiddle.net/2bs7q50a/
-
-
-    article.center.code-2
-        .wrapper
-            pre
-                code.css.
-                    .page {
-                        display: grid;
-                        grid-gap: 0 20px;
-                        grid-template-columns: 250px auto 350px;
-                        grid-template-rows: 100px auto 100px;
-                        grid-template-areas:
-                            "header header header"
-                            "nav    main   aside"
-                            "footer footer footer";
-                    }
-
-    article.center.code-1
-        .wrapper
-            pre
-                code.css.
-                    .header { grid-area: header; }
-                    .aside { grid-area: aside; }
-                    .nav { grid-area: nav; }
-                    .main { grid-area: main; }
-                    .footer { grid-area: footer; }
-
-
-    article.example.example-grid-layout-area
-        .page
-            main.main Капитан схватил утконоса и радостноподбросил его в небо. Зверек расправил крылья и взлетел
-            nav.nav Навигация
-            aside.aside Реклама
-            header.header Шапка
-            footer.footer Подвал
-
-    article.center.code-2
-        .wrapper
-            pre
-                code.css.
-                    @media (max-width: 900px) {
-                        .page {
-                            grid-template-areas:
-                                "header header header"
-                                "nav    main   main"
-                                "footer footer footer";
-                        }
-                    }
-
-    article.example.example-grid-layout-area
-        .page.wide-x
-            main.main Капитан схватил утконоса и радостноподбросил его в небо. Зверек расправил крылья и взлетел
-            nav.nav Навигация
-            aside.aside Реклама
-            header.header Шапка
-            footer.footer Подвал
-
-    article.center.code-2
-        .wrapper
-            pre
-                code.css.
-                    @media (max-width: 900px) {
-                        .page {
-                            grid-template-areas:
-                                "header header header"
-                                "nav    main   main"
-                                "footer footer footer";
-                        }
-                        .aside {
-                            display: none;
-                        }
-                    }
-
-    article.example.example-grid-layout-area
-        .page.wide
-            main.main Капитан схватил утконоса и радостноподбросил его в небо. Зверек расправил крылья и взлетел
-            nav.nav Навигация
-            aside.aside Реклама
-            header.header Шапка
-            footer.footer Подвал
-
-    article.screen.screen--pinterest
-
-    article.center.code-1
-        .wrapper
-            pre
-                code.html.
-                    &lt;main class="products">
-                        &lt;article class="product">…&lt;/article>
-                        &lt;article class="product">…&lt;/article>
-                        &lt;article class="product">…&lt;/article>
-                        &lt;article class="product">…&lt;/article>
-                        &lt;article class="product">…&lt;/article>
-                        …
-                    &lt;/main>
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                    .products {
-                        display: grid;
-                        grid-gap: 20px;
-                        grid-template-columns:
-                            repeat(6, 150px);
-                    }
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                  .product--big {
-                        …
-                        grid-row: span 2;
-                        grid-column: span 2;
-                        …
-                    }
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                  .product--tall {
-                        …
-                        grid-row: span 2;
-                        …
-                    }
-
-    article.screen.screen--grid-1
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                    .product {
-                        …
-                        grid-column: span 6;
-                        …
-                    }
-
-    article.screen.screen--grid-2
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                    .product {
-                        …
-                        grid-auto-flow: dense;
-                        …
-                    }
-
-    article.screen.screen--grid-3
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                    .banner {
-                        …
-                        grid-row-start: 2;
-                        …
-                    }
-
-    article.screen.screen--grid-4
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                    .banner {
-                        …
-                        grid-row-start: 2;
-                        grid-column-start: 2;
-                        …
-                    }
-
-    article.screen.screen--grid-5
-
-    article.screen.screen--grid-future
-
-    article.center.qrcode.var-5
-        .wrapper
-            .half
-                h2 Ability for grid items to automatically span rows and columns based on content size
-            .half
-                img(src="images/issue.svg", alt="QRCODE cо ссылкой на issue")
-            p
-                a(href="https://github.com/w3c/csswg-drafts/issues/1373", data-click=true) https://github.com/w3c/csswg-drafts/issues/1373
-
-
-    article.center.qrcode.var-2
-        .wrapper
-            .half
-                h2 CSS Grid Layout Module Level 1
-            .half
-                img(src="images/grid.svg", alt="QRCODE cо ссылкой на CSS Grid Layout Module Level 1")
-            p
-                a(href="https://www.w3.org/TR/css3-grid-layout/", data-click=true) https://www.w3.org/TR/css3-grid-layout/
-
-    article.screen.screen--grid-support
-      
-    article.screen.screen--grid-support-2
-
-    article.center.code-0
-        .wrapper
-            pre
-                code.css.
-                    @supports ( grid-auto-flow: dense ) {
-                        /* Магия */
-                    }
-
-    //- article.center.qrcode.var-2
-    //-     .wrapper
-    //-         .half
-    //-             h2 CSS Box Alignment Module Level 3
-    //-         .half
-    //-             img(src="images/box.svg", alt="QRCODE cо ссылкой на CSS Box Alignment Module Level 3")
-    //-         p
-    //-             a(href="https://www.w3.org/TR/css-align-3/", data-click=true) https://www.w3.org/TR/css-align-3/
-    //- 
 
     article.cloud.center.sadman
         h1
