--- a/developer/styl/slides.styl
+++ b/developer/styl/slides.styl
@@ -174,6 +174,25 @@ article.cloud.colspan
             transform rotate(-75deg)
             transform-origin 10px -198px
 
+article.cloud.summer
+    background-image url(../images/summer.png)
+    background-size cover
+    background-position 50% 50%
+    h1
+        width 400px
+        height 400px
+        right 5%
+        top 5%
+        line-height 400px
+        b
+            color red
+        .wrapper
+            font-size 150px
+            line-height 400px
+            text-transform none
+        &:after
+            transform rotate(-295deg)
+            transform-origin 10px -198px
 
 .illustration--grail
   background-image url('../images/grail.png')
@@ -571,7 +590,7 @@ for num in (1..8)
 article.screen.screen--grid-support
   background-image url('../images/grid-support.png')
   background-size cover
-  
+
 article.screen.screen--grid-support-2
   background-image url('../images/cool.png')
   background-size contain
