--- a/developer/index.jade
+++ b/developer/index.jade
@@ -10,6 +10,8 @@ block slides
             p.wrapper Что нам стоит
                 |  дом построить?
 
+    article.illustration.illustration--beard
+
     article.illustration.illustration--captain
 
     article.illustration.illustration--man
