--- a/developer/styl/slides.styl
+++ b/developer/styl/slides.styl
@@ -198,6 +198,9 @@ article.cloud.summer
   background-image url('../images/grail.png')
   background-position 50% 20%
 
+.illustration--beard
+  background-image url('../images/beard.jpg')
+
 .illustration--real-grail
   background-image url('../images/original.gif')
   background-size auto 90%
